--- a/README
+++ b/README
@@ -1,7 +1,4 @@
 This is the kitchen I use for extremely blue.
-All of the scripts are bash based.
+All of the scripts are python based.
 
-I will make a windows port of the scripts and
-programs at a later time.
-
-**READ NOTES**
+**READ HOWTO**
